--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8" />
@@ -10,15 +10,130 @@
 <body>
   <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
   <script>
-  if (window.netlifyIdentity) {
-    window.netlifyIdentity.on("init", user => {
-      if (!user) {
-        window.netlifyIdentity.on("login", () => {
-          document.location.href = "/admin/";
-        });
+    // تضمين الإعدادات مباشرة
+    CMS.init({
+      config: {
+        backend: {
+          name: 'github',
+          repo: 'Egyptian-Cuckold/egyptian-cuckold-site',
+          branch: 'main'
+        },
+        media_folder: 'public/assets/uploads',
+        public_folder: '/assets/uploads',
+        collections: [
+          {
+            name: 'settings',
+            label: '⚙️ إعدادات الموقع',
+            files: [
+              {
+                label: '⚙️ الإعدادات العامة',
+                name: 'general',
+                file: 'src/const.ts',
+                fields: [
+                  {label: '📌 عنوان الموقع', name: 'APP_TITLE', widget: 'string'},
+                  {label: '📝 وصف الموقع', name: 'APP_DESCRIPTION', widget: 'text'},
+                  {label: '🎨 محتوى الترحيب', name: 'WELCOME_MESSAGE', widget: 'markdown'},
+                  {label: '🖼️ صورة الغلاف', name: 'COVER_IMAGE', widget: 'image', required: false},
+                  {label: '📧 البريد الإلكتروني', name: 'CONTACT_EMAIL', widget: 'string', required: false},
+                  {label: '🔗 رابط تليجرام', name: 'TELEGRAM_LINK', widget: 'string', required: false}
+                ]
+              }
+            ]
+          },
+          {
+            name: 'challenges',
+            label: '🎯 التحديات',
+            folder: 'content/challenges',
+            create: true,
+            slug: '{{year}}-{{month}}-{{day}}-{{slug}}',
+            fields: [
+              {label: '📌 العنوان', name: 'title', widget: 'string'},
+              {label: '📝 الوصف المختصر', name: 'description', widget: 'text'},
+              {label: '✍️ المحتوى الكامل', name: 'body', widget: 'markdown'},
+              {label: '🏷️ الفئة', name: 'category', widget: 'select', options: ['تحدي جديد', 'تحدي متقدم', 'تحدي خطير', 'تحدي للمبتدئين']},
+              {label: '⚠️ مستوى الصعوبة', name: 'difficulty', widget: 'select', options: ['سهل', 'متوسط', 'صعب', 'خطير جداً']},
+              {label: '🖼️ صورة التحدي', name: 'image', widget: 'image', required: false},
+              {label: '📅 تاريخ النشر', name: 'date', widget: 'datetime'},
+              {label: '🏷️ الوسوم', name: 'tags', widget: 'list', required: false}
+            ]
+          },
+          {
+            name: 'images',
+            label: '📸 الصور',
+            folder: 'content/images',
+            create: true,
+            slug: '{{year}}-{{month}}-{{day}}-{{slug}}',
+            fields: [
+              {label: '📌 عنوان الصورة', name: 'title', widget: 'string'},
+              {label: '📝 الوصف', name: 'description', widget: 'text'},
+              {label: '🖼️ الصورة', name: 'image', widget: 'image'},
+              {label: '🏷️ الفئة', name: 'category', widget: 'select', options: ['صورة تحدي', 'صورة ساخنة', 'صورة شخصية', 'أخرى']},
+              {label: '📅 تاريخ الرفع', name: 'date', widget: 'datetime'},
+              {label: '⚠️ محتوى حساس؟', name: 'nsfw', widget: 'boolean', default: true},
+              {label: '🏷️ الوسوم', name: 'tags', widget: 'list', required: false}
+            ]
+          },
+          {
+            name: 'videos',
+            label: '🎥 الفيديوهات',
+            folder: 'content/videos',
+            create: true,
+            slug: '{{year}}-{{month}}-{{day}}-{{slug}}',
+            fields: [
+              {label: '📌 عنوان الفيديو', name: 'title', widget: 'string'},
+              {label: '📝 الوصف', name: 'description', widget: 'text'},
+              {label: '📤 رفع ملف فيديو', name: 'videoFile', widget: 'file', required: false},
+              {label: '🔗 رابط الفيديو (خارجي)', name: 'videoUrl', widget: 'string', required: false},
+              {label: '🖼️ صورة مصغرة', name: 'thumbnail', widget: 'image', required: false},
+              {label: '🏷️ نوع الفيديو', name: 'category', widget: 'select', options: ['فيديو تحدي', 'فيديو تعليمي', 'فيديو ساخن', 'أخرى']},
+              {label: '⏱️ مدة الفيديو (MM:SS)', name: 'duration', widget: 'string', pattern: ['^([0-5]?[0-9]):([0-5][0-9])$', 'الرجاء إدخال الوقت بصيغة MM:SS (مثال: 00:45)'], required: false},
+              {label: '📅 تاريخ النشر', name: 'date', widget: 'datetime'},
+              {label: '⚠️ محتوى للكبار؟', name: 'nsfw', widget: 'boolean', default: true},
+              {label: '🏷️ الوسوم', name: 'tags', widget: 'list', required: false}
+            ]
+          },
+          {
+            name: 'pages',
+            label: '📄 الصفحات الثابتة',
+            folder: 'content/pages',
+            create: true,
+            slug: '{{slug}}',
+            fields: [
+              {label: '📌 عنوان الصفحة', name: 'title', widget: 'string'},
+              {label: '🔗 الرابط المختصر', name: 'slug', widget: 'string'},
+              {label: '✍️ محتوى الصفحة', name: 'body', widget: 'markdown'},
+              {label: '📅 تاريخ الإنشاء', name: 'date', widget: 'datetime'},
+              {label: '🖼️ صورة الصفحة', name: 'image', widget: 'image', required: false}
+            ]
+          },
+          {
+            name: 'announcements',
+            label: '📢 الإعلانات',
+            folder: 'content/announcements',
+            create: true,
+            slug: '{{year}}-{{month}}-{{day}}-{{slug}}',
+            fields: [
+              {label: '📌 عنوان الإعلان', name: 'title', widget: 'string'},
+              {label: '✍️ نص الإعلان', name: 'body', widget: 'markdown'},
+              {label: '🎨 نوع الإعلان', name: 'type', widget: 'select', options: ['info', 'warning', 'success', 'danger']},
+              {label: '📅 تاريخ البداية', name: 'startDate', widget: 'datetime'},
+              {label: '📅 تاريخ الانتهاء', name: 'endDate', widget: 'datetime', required: false},
+              {label: '✅ نشط؟', name: 'active', widget: 'boolean', default: true}
+            ]
+          }
+        ]
       }
     });
-  }
+
+    if (window.netlifyIdentity) {
+      window.netlifyIdentity.on("init", user => {
+        if (!user) {
+          window.netlifyIdentity.on("login", () => {
+            document.location.href = "/admin/";
+          });
+        }
+      });
+    }
   </script>
 </body>
 </html>
